--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ img{
 .navbar-default .navbar-nav>li>a{
   font-family: 'Raleway', sans-serif;
   font-size: 1.9rem;
-  color:#c8c8e0 !important;
+  color: beige !important;
 }
 
 .container>h1{
